bug fix in overflow

--- a/src/components/todo.css
+++ b/src/components/todo.css
@@ -23,7 +23,8 @@
 .todo-label {
   background-color: #434343;
   padding: 5px 10px;
-  max-width: max-content;
+  max-width: 150px;
+  overflow: hidden;
   border-radius: 4px;
   margin-right: 10px;
   margin-top: 7px;
